reverting to html over rdf for inverse table

--- a/components/services/prov-o/includes/cross-reference-collections.html
+++ b/components/services/prov-o/includes/cross-reference-collections.html
@@ -224,8 +224,8 @@
 
       <dt></dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#pairKey" href="#pairKey">prov:pairKey</a> <sup class="type-dp" title="data property">dp</sup>
-        , <a title="http://www.w3.org/ns/prov#pairValue" href="#pairValue">prov:pairValue</a> <sup class="type-op" title="object property">op</sup>
+        <a title="http://www.w3.org/ns/prov#pairValue" href="#pairValue">prov:pairValue</a> <sup class="type-op" title="object property">op</sup>
+        , <a title="http://www.w3.org/ns/prov#pairKey" href="#pairKey">prov:pairKey</a> <sup class="type-dp" title="data property">dp</sup>
       </dd>
 
       <dt>in range of</dt>
