--- a/components/services/prov-o/includes/cross-reference-expanded.html
+++ b/components/services/prov-o/includes/cross-reference-expanded.html
@@ -91,7 +91,7 @@
 
       <dt></dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#qualifiedDelegation" href="#qualifiedDelegation">prov:qualifiedDelegation</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#actedOnBehalfOf" href="#actedOnBehalfOf">prov:actedOnBehalfOf</a>  <sup class="type-op" title="object property">op</sup>      </dd>
+        <a title="http://www.w3.org/ns/prov#actedOnBehalfOf" href="#actedOnBehalfOf">prov:actedOnBehalfOf</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#qualifiedDelegation" href="#qualifiedDelegation">prov:qualifiedDelegation</a>  <sup class="type-op" title="object property">op</sup>      </dd>
     </dl>
   </div>
 
@@ -125,7 +125,7 @@
 
       <dt></dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#qualifiedDelegation" href="#qualifiedDelegation">prov:qualifiedDelegation</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#actedOnBehalfOf" href="#actedOnBehalfOf">prov:actedOnBehalfOf</a>  <sup class="type-op" title="object property">op</sup>      </dd>
+        <a title="http://www.w3.org/ns/prov#actedOnBehalfOf" href="#actedOnBehalfOf">prov:actedOnBehalfOf</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#qualifiedDelegation" href="#qualifiedDelegation">prov:qualifiedDelegation</a>  <sup class="type-op" title="object property">op</sup>      </dd>
     </dl>
   </div>
 
@@ -159,7 +159,7 @@
 
       <dt></dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#qualifiedDelegation" href="#qualifiedDelegation">prov:qualifiedDelegation</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#actedOnBehalfOf" href="#actedOnBehalfOf">prov:actedOnBehalfOf</a>  <sup class="type-op" title="object property">op</sup>      </dd>
+        <a title="http://www.w3.org/ns/prov#actedOnBehalfOf" href="#actedOnBehalfOf">prov:actedOnBehalfOf</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#qualifiedDelegation" href="#qualifiedDelegation">prov:qualifiedDelegation</a>  <sup class="type-op" title="object property">op</sup>      </dd>
     </dl>
   </div>
 </div>
