--- a/components/services/prov-o/includes/cross-reference-qualified.html
+++ b/components/services/prov-o/includes/cross-reference-qualified.html
@@ -489,10 +489,10 @@
 
       <dt>has subclasses</dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#Usage" href="#Usage" class="owlclass">prov:Usage</a>
-        , <a title="http://www.w3.org/ns/prov#Generation" href="#Generation" class="owlclass">prov:Generation</a>
-        , <a title="http://www.w3.org/ns/prov#End" href="#End" class="owlclass">prov:End</a>
+        <a title="http://www.w3.org/ns/prov#Generation" href="#Generation" class="owlclass">prov:Generation</a>
+        , <a title="http://www.w3.org/ns/prov#Usage" href="#Usage" class="owlclass">prov:Usage</a>
         , <a title="http://www.w3.org/ns/prov#Invalidation" href="#Invalidation" class="owlclass">prov:Invalidation</a>
+        , <a title="http://www.w3.org/ns/prov#End" href="#End" class="owlclass">prov:End</a>
         , <a title="http://www.w3.org/ns/prov#Start" href="#Start" class="owlclass">prov:Start</a>
       </dd>
     </dl>
@@ -559,9 +559,9 @@
 
       <dt></dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#involvee" href="#involvee">prov:involvee</a> <sup class="type-op" title="object property">op</sup>
+        <a title="http://www.w3.org/ns/prov#hadRole" href="#hadRole">prov:hadRole</a> <sup class="type-op" title="object property">op</sup>
         , <a title="http://www.w3.org/ns/prov#hadActivity" href="#hadActivity">prov:hadActivity</a> <sup class="type-op" title="object property">op</sup>
-        , <a title="http://www.w3.org/ns/prov#hadRole" href="#hadRole">prov:hadRole</a> <sup class="type-op" title="object property">op</sup>
+        , <a title="http://www.w3.org/ns/prov#involvee" href="#involvee">prov:involvee</a> <sup class="type-op" title="object property">op</sup>
       </dd>
 
       <dt>has subclasses</dt>
@@ -1401,19 +1401,19 @@
         <dd>
           <ul>
             <li>
-              <a title="http://www.w3.org/ns/prov#generated" href="#generated" class="owlclass">prov:generated</a>
+              <a title="http://www.w3.org/ns/prov#tracedTo" href="#tracedTo" class="owlclass">prov:tracedTo</a>
             </li>
             <li>
               <a title="http://www.w3.org/ns/prov#wasAssociatedWith" href="#wasAssociatedWith" class="owlclass">prov:wasAssociatedWith</a>
             </li>
             <li>
+              <a title="http://www.w3.org/ns/prov#wasStartedBy" href="#wasStartedBy" class="owlclass">prov:wasStartedBy</a>
+            </li>
+            <li>
               <a title="http://www.w3.org/ns/prov#wasGeneratedBy" href="#wasGeneratedBy" class="owlclass">prov:wasGeneratedBy</a>
             </li>
             <li>
-              <a title="http://www.w3.org/ns/prov#wasInvalidatedBy" href="#wasInvalidatedBy" class="owlclass">prov:wasInvalidatedBy</a>
-            </li>
-            <li>
-              <a title="http://www.w3.org/ns/prov#tracedTo" href="#tracedTo" class="owlclass">prov:tracedTo</a>
+              <a title="http://www.w3.org/ns/prov#generated" href="#generated" class="owlclass">prov:generated</a>
             </li>
             <li>
               <a title="http://www.w3.org/ns/prov#used" href="#used" class="owlclass">prov:used</a>
@@ -1422,10 +1422,10 @@
               <a title="http://www.w3.org/ns/prov#actedOnBehalfOf" href="#actedOnBehalfOf" class="owlclass">prov:actedOnBehalfOf</a>
             </li>
             <li>
-              <a title="http://www.w3.org/ns/prov#wasInformedBy" href="#wasInformedBy" class="owlclass">prov:wasInformedBy</a>
+              <a title="http://www.w3.org/ns/prov#wasInvalidatedBy" href="#wasInvalidatedBy" class="owlclass">prov:wasInvalidatedBy</a>
             </li>
             <li>
-              <a title="http://www.w3.org/ns/prov#wasStartedBy" href="#wasStartedBy" class="owlclass">prov:wasStartedBy</a>
+              <a title="http://www.w3.org/ns/prov#wasInformedBy" href="#wasInformedBy" class="owlclass">prov:wasInformedBy</a>
             </li>
             <li>
               <a title="http://www.w3.org/ns/prov#wasEndedBy" href="#wasEndedBy" class="owlclass">prov:wasEndedBy</a>
