--- a/components/services/prov-o/includes/cross-reference-qualified.html
+++ b/components/services/prov-o/includes/cross-reference-qualified.html
@@ -34,8 +34,8 @@
 
       <dt>has subclasses</dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#Generation" href="#Generation" class="owlclass">prov:Generation</a>
-        , <a title="http://www.w3.org/ns/prov#Invalidation" href="#Invalidation" class="owlclass">prov:Invalidation</a>
+        <a title="http://www.w3.org/ns/prov#Invalidation" href="#Invalidation" class="owlclass">prov:Invalidation</a>
+        , <a title="http://www.w3.org/ns/prov#Generation" href="#Generation" class="owlclass">prov:Generation</a>
         , <a title="http://www.w3.org/ns/prov#Communication" href="#Communication" class="owlclass">prov:Communication</a>
       </dd>
     </dl>
@@ -296,8 +296,8 @@
 
       <dt></dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#hadUsage" href="#hadUsage">prov:hadUsage</a> <sup class="type-op" title="object property">op</sup>
-        , <a title="http://www.w3.org/ns/prov#hadGeneration" href="#hadGeneration">prov:hadGeneration</a> <sup class="type-op" title="object property">op</sup>
+        <a title="http://www.w3.org/ns/prov#hadGeneration" href="#hadGeneration">prov:hadGeneration</a> <sup class="type-op" title="object property">op</sup>
+        , <a title="http://www.w3.org/ns/prov#hadUsage" href="#hadUsage">prov:hadUsage</a> <sup class="type-op" title="object property">op</sup>
       </dd>
 
       <dt></dt>
@@ -398,14 +398,15 @@
 
       <dt>has subclasses</dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#Start" href="#Start" class="owlclass">prov:Start</a>
+        <a title="http://www.w3.org/ns/prov#Usage" href="#Usage" class="owlclass">prov:Usage</a>
+        , <a title="http://www.w3.org/ns/prov#Source" href="#Source" class="owlclass">prov:Source</a>
+        , <a title="http://www.w3.org/ns/prov#Membership" href="#Membership" class="owlclass">prov:Membership</a>
+        , <a title="http://www.w3.org/ns/prov#Revision" href="#Revision" class="owlclass">prov:Revision</a>
+        , <a title="http://www.w3.org/ns/prov#Quotation" href="#Quotation" class="owlclass">prov:Quotation</a>
+        , <a title="http://www.w3.org/ns/prov#Start" href="#Start" class="owlclass">prov:Start</a>
         , <a title="http://www.w3.org/ns/prov#End" href="#End" class="owlclass">prov:End</a>
         , <a title="http://www.w3.org/ns/prov#Derivation" href="#Derivation" class="owlclass">prov:Derivation</a>
         , <a title="http://www.w3.org/ns/prov#Trace" href="#Trace" class="owlclass">prov:Trace</a>
-        , <a title="http://www.w3.org/ns/prov#Usage" href="#Usage" class="owlclass">prov:Usage</a>
-        , <a title="http://www.w3.org/ns/prov#Source" href="#Source" class="owlclass">prov:Source</a>
-        , <a title="http://www.w3.org/ns/prov#Revision" href="#Revision" class="owlclass">prov:Revision</a>
-        , <a title="http://www.w3.org/ns/prov#Quotation" href="#Quotation" class="owlclass">prov:Quotation</a>
       </dd>
     </dl>
   </div>
@@ -489,10 +490,10 @@
 
       <dt>has subclasses</dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#Generation" href="#Generation" class="owlclass">prov:Generation</a>
-        , <a title="http://www.w3.org/ns/prov#Usage" href="#Usage" class="owlclass">prov:Usage</a>
-        , <a title="http://www.w3.org/ns/prov#Invalidation" href="#Invalidation" class="owlclass">prov:Invalidation</a>
+        <a title="http://www.w3.org/ns/prov#Invalidation" href="#Invalidation" class="owlclass">prov:Invalidation</a>
         , <a title="http://www.w3.org/ns/prov#End" href="#End" class="owlclass">prov:End</a>
+        , <a title="http://www.w3.org/ns/prov#Usage" href="#Usage" class="owlclass">prov:Usage</a>
+        , <a title="http://www.w3.org/ns/prov#Generation" href="#Generation" class="owlclass">prov:Generation</a>
         , <a title="http://www.w3.org/ns/prov#Start" href="#Start" class="owlclass">prov:Start</a>
       </dd>
     </dl>
@@ -559,9 +560,9 @@
 
       <dt></dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#hadRole" href="#hadRole">prov:hadRole</a> <sup class="type-op" title="object property">op</sup>
+        <a title="http://www.w3.org/ns/prov#involvee" href="#involvee">prov:involvee</a> <sup class="type-op" title="object property">op</sup>
         , <a title="http://www.w3.org/ns/prov#hadActivity" href="#hadActivity">prov:hadActivity</a> <sup class="type-op" title="object property">op</sup>
-        , <a title="http://www.w3.org/ns/prov#involvee" href="#involvee">prov:involvee</a> <sup class="type-op" title="object property">op</sup>
+        , <a title="http://www.w3.org/ns/prov#hadRole" href="#hadRole">prov:hadRole</a> <sup class="type-op" title="object property">op</sup>
       </dd>
 
       <dt>has subclasses</dt>
@@ -1401,10 +1402,10 @@
         <dd>
           <ul>
             <li>
-              <a title="http://www.w3.org/ns/prov#tracedTo" href="#tracedTo" class="owlclass">prov:tracedTo</a>
+              <a title="http://www.w3.org/ns/prov#actedOnBehalfOf" href="#actedOnBehalfOf" class="owlclass">prov:actedOnBehalfOf</a>
             </li>
             <li>
-              <a title="http://www.w3.org/ns/prov#wasAssociatedWith" href="#wasAssociatedWith" class="owlclass">prov:wasAssociatedWith</a>
+              <a title="http://www.w3.org/ns/prov#wasInvalidatedBy" href="#wasInvalidatedBy" class="owlclass">prov:wasInvalidatedBy</a>
             </li>
             <li>
               <a title="http://www.w3.org/ns/prov#wasStartedBy" href="#wasStartedBy" class="owlclass">prov:wasStartedBy</a>
@@ -1413,22 +1414,22 @@
               <a title="http://www.w3.org/ns/prov#wasGeneratedBy" href="#wasGeneratedBy" class="owlclass">prov:wasGeneratedBy</a>
             </li>
             <li>
+              <a title="http://www.w3.org/ns/prov#wasEndedBy" href="#wasEndedBy" class="owlclass">prov:wasEndedBy</a>
+            </li>
+            <li>
+              <a title="http://www.w3.org/ns/prov#tracedTo" href="#tracedTo" class="owlclass">prov:tracedTo</a>
+            </li>
+            <li>
               <a title="http://www.w3.org/ns/prov#generated" href="#generated" class="owlclass">prov:generated</a>
             </li>
             <li>
-              <a title="http://www.w3.org/ns/prov#used" href="#used" class="owlclass">prov:used</a>
-            </li>
-            <li>
-              <a title="http://www.w3.org/ns/prov#actedOnBehalfOf" href="#actedOnBehalfOf" class="owlclass">prov:actedOnBehalfOf</a>
-            </li>
-            <li>
-              <a title="http://www.w3.org/ns/prov#wasInvalidatedBy" href="#wasInvalidatedBy" class="owlclass">prov:wasInvalidatedBy</a>
+              <a title="http://www.w3.org/ns/prov#wasAssociatedWith" href="#wasAssociatedWith" class="owlclass">prov:wasAssociatedWith</a>
             </li>
             <li>
               <a title="http://www.w3.org/ns/prov#wasInformedBy" href="#wasInformedBy" class="owlclass">prov:wasInformedBy</a>
             </li>
             <li>
-              <a title="http://www.w3.org/ns/prov#wasEndedBy" href="#wasEndedBy" class="owlclass">prov:wasEndedBy</a>
+              <a title="http://www.w3.org/ns/prov#used" href="#used" class="owlclass">prov:used</a>
             </li>
           </ul>
         </dd>
@@ -1472,6 +1473,9 @@
         <dt>has sub-properties</dt>
         <dd>
           <ul>
+            <li>
+              <a title="http://www.w3.org/ns/prov#pair" href="#pair" class="owlclass">prov:pair</a>
+            </li>
             <li>
               <a title="http://www.w3.org/ns/prov#agent" href="#agent" class="owlclass">prov:agent</a>
             </li>
