--- a/components/services/prov-o/includes/at-a-glance-collections.html
+++ b/components/services/prov-o/includes/at-a-glance-collections.html
@@ -3,7 +3,7 @@
      class="prov-collections owl-classes at-a-glance">
   <ul class="hlist">
     <li>
-      <a href="#CompleteMembership">prov:CompleteMembership</a>
+      <a href="#Collection">prov:Collection</a>
     </li>
     <li>
       <a href="#Dictionary">prov:Dictionary</a>
@@ -42,13 +42,13 @@
       <a href="#dictionary">prov:dictionary</a>
     </li>
     <li class="object-property">
+      <a href="#hadMember">prov:hadMember</a>
+    </li>
+    <li class="object-property">
       <a href="#inserted">prov:inserted</a>
     </li>
     <li class="object-property">
-      <a href="#member">prov:member</a>
-    </li>
-    <li class="object-property">
-      <a href="#membership">prov:membership</a>
+      <a href="#pair">prov:pair</a>
     </li>
     <li class="datatype-property">
       <a href="#pairKey">prov:pairKey</a>
@@ -60,7 +60,13 @@
       <a href="#qualifiedInsertion">prov:qualifiedInsertion</a>
     </li>
     <li class="object-property">
+      <a href="#qualifiedMembership">prov:qualifiedMembership</a>
+    </li>
+    <li class="object-property">
       <a href="#qualifiedRemoval">prov:qualifiedRemoval</a>
+    </li>
+    <li class="object-property">
+      <a href="#removed">prov:removed</a>
     </li>
     <li class="datatype-property">
       <a href="#removedKey">prov:removedKey</a>
