save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -77,7 +77,7 @@ involvement).  </p>
        </div>
 
       <div id="qualifed-forms-starting-point" style="padding: 20px">
-         <p>Usage and Association (described above) are accompanied by six other qualifications of Starting Point relations. The <a href="#qualifed-forms-starting-point">following table</a> lists the simple relations that can be qualified, along with the qualification property, qualification class, and the property used to indicate the object of the qualified relation.
+         <p>Usage and Association (described above) are accompanied by six other qualifications of Starting Point relations. The following table lists the simple relations that can be qualified, along with the qualification property, qualification class, and the property used to indicate the object of the qualified relation.
          </p>
          <div style="text-align: center">
             {% include "includes/qualifed-forms-starting-point.html" %}
@@ -85,7 +85,7 @@ involvement).  </p>
       </div>
 
       <div id="qualifed-forms-expanded" style="padding: 20px">
-         <p>Six relations from the Expanded category can also be qualified. The <a href="#qualifed-forms-expanded">following table</a> lists the simple relations that can be qualified, along with the qualification property, qualification class, and the property used to indicate the object of the qualified relation.
+         <p>Six relations from the Expanded category can also be qualified. The following table lists the simple relations that can be qualified, along with the qualification property, qualification class, and the property used to indicate the object of the qualified relation.
          </p>
          <div style="text-align: center">
             {% include "includes/qualifed-forms-expanded.html" %}
